--- a/02-templates/templates/base/base.html
+++ b/02-templates/templates/base/base.html
@@ -1,7 +1,10 @@
 
 {{ define "header" }}
     <header>
-        Encabezado
+        <ul>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/registro">Registro</a></li>
+        </ul>
     </header>
 {{end}}
 
